@@ -1,8 +1,8 @@
-AUX clementine-0.6-optional-dbus-devicekit.patch 8655 RMD160 70200cc2b4e152f443dde1d957a596d4c414824a SHA1 04e722b11b607271b6158e535525d4ec7fd80116 SHA256 a16af3c204ad6d6f914a5ffbbfb6c22e693530382e89f6c21c7bfdb7fe42e360
+AUX clementine-0.6-optional-dbus-devicekit.patch 8972 RMD160 4270e35f1109f56f0c0aaa7edf299f52eb84d66b SHA1 f5b452b580cea58244fcbb37bb5ecf8423ed88c5 SHA256 b93effff4ce1b40a5659e1cd977939547c257f5190d044c9fb9075bc4f552f81
 AUX clementine-0.6-optional-liblastfm.patch 32418 RMD160 d9e580827599e7d5a40fd8d086226c9c6d92480b SHA1 621ebf7a0974cd89a3d77cd752cfaba079fd4756 SHA256 5e54340c1e4eef08b2d79ffaf28ef959a6d6abcd56a0530e7039d0ea1655c273
 DIST clementine-0.6.tar.gz 5601219 RMD160 5b7418bef5bed9a9f1837741ea31fa3304894f88 SHA1 02f2ca926aad9748e3b4f58642b1daf95dadbc16 SHA256 7a7393af462a3c0864279d8cb2fc59afeec718837e5a1d0818a16b8a20d7cd0c
 EBUILD clementine-0.6-r1.ebuild 2967 RMD160 90081ec9820b483061069781daf2e143e7bc39f5 SHA1 72454b4ee58e2334933579083cc9ab32a7376ec1 SHA256 63c130a31003edd1218b95d328692ba4116552376d2c362d2006277527812288
-EBUILD clementine-0.6-r2.ebuild 3162 RMD160 cbda6194501a9dda081477355b3ea8a2df29c272 SHA1 2be875a68e5770f40c45fc761d455ba153444a1f SHA256 5b2523bf68854b0235d01a00e3478a7345110b0873eb3d74ccc97ffe74086a2f
-EBUILD clementine-9999.ebuild 3417 RMD160 400dcb575026a7ba306dbc82b7756f00bfa49271 SHA1 0b94115a5c0ccd56b5551d3683a395d950c6017a SHA256 b273580268086d0d373f7f8f2fd06754e40152bb43e229912b0a9e1182ce301b
-MISC ChangeLog 2702 RMD160 bc74988d050d4d2e15d385e167ec94a904b83f87 SHA1 4960c01ff1645be7cd0eea1945f649ae4560dc06 SHA256 316db737a2c35fc1fefbad79158a8cf7aedd03ad8c022598813c5361cd1a45d7
-MISC metadata.xml 801 RMD160 901a1cf26dd47c0c3746daef49fc12d54523b425 SHA1 3e897a69eda4c453e97f47369ebca255c14b1614 SHA256 68185fc648519266d3089c320abe73dcb27015575f7b6bed6b5a3c6edc70acc4
+EBUILD clementine-0.6-r2.ebuild 3147 RMD160 aad6e9e5af9e9c3af3f389e9edcd3ad48109f140 SHA1 2006ca9ce2d6c993fd947ebca96494b3a1467795 SHA256 4a1f663a016b32b003936cf461fd8e226de366d4ef2cbc7b0c6e6801dcb9c84c
+EBUILD clementine-9999.ebuild 2709 RMD160 d8288fe9ad6f1dcd3530245e106967f1340cac65 SHA1 ab2a8c8f8ffa7149f79ab8b0a219fdc8c116d7d9 SHA256 5e21d52a3650ff2db711224288ea1528503242c13249004d2d98106a60944c24
+MISC ChangeLog 2920 RMD160 92871465a3b26c10f528b2a1783f090f557f1aea SHA1 5efb715733509ad291e02605034809fae6f97854 SHA256 9d2edd8acae8223930a419a76cf4bc0372e544262ab34093e888b3065074ad08
+MISC metadata.xml 679 RMD160 3f0cc7a3628ab63bcac7966952b9b37f7ab8d4eb SHA1 ab4cd2c20f0b756d1cac82df697a7397baed0157 SHA256 f0f85ea95c74653676e03b118d098aaeab32689072ad2f55484e83dff8a33657
