@@ -15,7 +15,7 @@ SRC_URI="http://clementine-player.googlecode.com/files/${P}.tar.gz"
 LICENSE="GPL-3"
 SLOT="0"
 KEYWORDS="~amd64 ~x86"
-IUSE="ayatana +dbus +devicekit iphone ipod +lastfm mtp projectm wiimote"
+IUSE="ayatana +dbus iphone ipod +lastfm mtp projectm +udev wiimote"
 IUSE+="${LANGS// / linguas_}"
 
 COMMON_DEPEND="
@@ -45,7 +45,7 @@ COMMON_DEPEND="
 # http://code.google.com/p/clementine-player/source/browse/#svn/trunk/3rdparty/libprojectm/patches
 # r1966 "Compile with a static sqlite by default, since Qt 4.7 doesn't seem to expose the symbols we need to use FTS"
 RDEPEND="${COMMON_DEPEND}
-	dbus? ( devicekit? ( sys-fs/udisks ) )
+	dbus? ( udev? ( sys-fs/udisks ) )
 	mtp? ( gnome-base/gvfs )
 	projectm? ( >=media-libs/libprojectm-1.2.0 )
 	>=media-plugins/gst-plugins-meta-0.10
@@ -79,7 +79,7 @@ src_configure() {
 		-DLINGUAS="${langs}"
 		-DBUNDLE_PROJECTM_PRESETS=OFF
 		$(cmake-utils_use dbus ENABLE_DBUS)
-		$(cmake-utils_use devicekit ENABLE_DEVICEKIT)
+		$(cmake-utils_use udev ENABLE_DEVICEKIT)
 		$(cmake-utils_use ipod ENABLE_LIBGPOD)
 		$(cmake-utils_use iphone ENABLE_IMOBILEDEVICE)
 		$(cmake-utils_use lastfm ENABLE_LIBLASTFM)
