@@ -10,9 +10,7 @@
     <flag name="ayatana">Build in support for Ayatana notification using the libindicate-qt plugin.</flag>
     <flag name="iphone">Enable support for iPod Touch, iPhone, iPad</flag>
     <flag name="lastfm">Use liblastfm for fetching song info, scrobbling and radio streams</flag>
-    <flag name="phonon">Enable support for Phonon engine</flag>
     <flag name='projectm'>Build with ProjectM visualization</flag>
-    <flag name="vlc">Enable support for VLC engine</flag>
     <flag name="wiimote">Enable support for Wii remote</flag>
   </use>
 </pkgmetadata>
